--- a/QuestionAndAnswer/QuestionAndAnswer/Base.lproj/Main.storyboard
+++ b/QuestionAndAnswer/QuestionAndAnswer/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -18,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="105" id="nSK-eg-9Zn">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="105" id="nSK-eg-9Zn" customClass="QuestionTableViewCell" customModule="QuestionAndAnswer" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="414" height="105"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="nSK-eg-9Zn" id="a10-uj-F7G">
@@ -84,6 +85,11 @@
                                         <constraint firstAttribute="bottom" secondItem="kMR-ao-LIt" secondAttribute="bottom" constant="8" id="isG-Ux-bya"/>
                                     </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="askedByLabel" destination="uUs-Vv-5Fw" id="pBE-1x-m0e"/>
+                                    <outlet property="questionLabel" destination="dnc-Tr-HMj" id="fDT-Nz-7gD"/>
+                                    <outlet property="viewAnswerTapped" destination="bNI-eu-NGW" id="56z-dy-mGa"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -92,12 +98,57 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Q&amp;A" id="gFe-uD-RLa">
-                        <barButtonItem key="rightBarButtonItem" title="Ask Question" id="7rb-gX-SKh"/>
+                        <barButtonItem key="rightBarButtonItem" title="Ask Question" id="7rb-gX-SKh">
+                            <connections>
+                                <segue destination="kaj-U2-XWX" kind="show" id="Dt7-XF-S3B"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="c35-kQ-Wya" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1052" y="27.436281859070466"/>
+            <point key="canvasLocation" x="1090" y="27"/>
+        </scene>
+        <!--Ask Question View Controller-->
+        <scene sceneID="mbE-Cl-1cY">
+            <objects>
+                <viewController id="kaj-U2-XWX" customClass="AskQuestionViewController" customModule="QuestionAndAnswer" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="mAv-uK-aSO">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name:" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="UtH-0K-QnX">
+                                <rect key="frame" x="8" y="104" width="398" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="yqp-3u-nhU">
+                                <rect key="frame" x="8" y="142.00000000000003" width="398" height="298.66666666666674"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="2Br-gO-9d3" firstAttribute="trailing" secondItem="UtH-0K-QnX" secondAttribute="trailing" constant="8" id="8ov-fc-nXg"/>
+                            <constraint firstItem="yqp-3u-nhU" firstAttribute="top" secondItem="UtH-0K-QnX" secondAttribute="bottom" constant="8" id="HKx-Ii-SA9"/>
+                            <constraint firstItem="UtH-0K-QnX" firstAttribute="leading" secondItem="2Br-gO-9d3" secondAttribute="leading" constant="8" id="UUv-WT-agA"/>
+                            <constraint firstItem="yqp-3u-nhU" firstAttribute="leading" secondItem="2Br-gO-9d3" secondAttribute="leading" constant="8" id="VYI-vd-Oyv"/>
+                            <constraint firstItem="yqp-3u-nhU" firstAttribute="height" secondItem="mAv-uK-aSO" secondAttribute="height" multiplier="1/3" id="bYm-7r-LlK"/>
+                            <constraint firstItem="2Br-gO-9d3" firstAttribute="trailing" secondItem="yqp-3u-nhU" secondAttribute="trailing" constant="8" id="fPY-LX-bUr"/>
+                            <constraint firstItem="UtH-0K-QnX" firstAttribute="top" secondItem="2Br-gO-9d3" secondAttribute="top" constant="16" id="lrk-sh-Wxc"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="2Br-gO-9d3"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="6l0-bB-W7m">
+                        <barButtonItem key="rightBarButtonItem" title="Submit Question" id="giZ-Yg-LaA"/>
+                    </navigationItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vsA-zG-a7L" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1835" y="27"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="APT-nK-om9">
